--- a/Praneeth/scl-doubtology/udayagiri/templates/auth_templates/login.html
+++ b/Praneeth/scl-doubtology/udayagiri/templates/auth_templates/login.html
@@ -14,7 +14,8 @@
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">Welcome Back!</h4>
                                     </div>
-                                    <form class="user" method='POST'>
+                                    <form class="user" action="{% url 'login' %}" method='POST'>
+                                    {% csrf_token %}
                                         <div class="form-group"><input class="form-control form-control-user" type="text" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Username..." name="username"></div>
                                         <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password"></div>
                                         <div class="form-group">
